Fixed contrast ratio for links in notification area

--- a/less/documentDB.less
+++ b/less/documentDB.less
@@ -3018,3 +3018,7 @@ settings-pane {
 .italic {
     font-style: italic;
 }
+
+.warningErrorContent a {
+    color: @AccentMediumHigh
+}
